# ccc

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  codex-in-claude.py  pyproject.toml  repo_scope.md  repo_scope_short.md
command_center/: __init__.py  __main__.py  accounts.py  aimmet.py  aimscore.py  autoprogress.py  cachettl.py  checks.py  cli.py  codex_in_claude.py  colors.py  config.py  core.py  daemon.py  demo.py  deps.py  doctor.py  drift.py  future_files.py  futuresync.py  gitcommit.py  gitstatus.py  hooks.py  idlenotify.py  install.py  install_commands.py  iterm_api.py  jump.py  jumpstate.py  launchd.py  links.py  llm.py  mirrors.py  models.py  nixos_overseer.py  notify.py  obsidian.py  peek.py  repos.py  resume.py  (+14 more)
command_center/adapters/: __init__.py  base.py  claude.py
command_center/assets/: README.md
command_center/assets/commands/: aim-history.md  aim.md  block.md  deadline.md  done.md  next-step.md  subgoal-history.md
command_center/views/: __init__.py  commands.py  ls.py  tui.py
docs/: codex.md  demo.tape  hooks.md  linux.md  obsidian.md  reference.md  roadmap-mobile-grapheneos.md
tests/: conftest.py  test_adapter.py  test_aimmet.py  test_aimscore.py  test_autoprogress.py  test_cachettl.py  test_checks.py  test_cli.py  test_codex_delegate.py  test_commands.py  test_config_colors.py  test_core.py  test_daemon.py  test_demo.py  test_deps.py  test_doctor.py  test_drift.py  test_future_files.py  test_futuresync.py  test_gitstatus.py  test_hooks.py  test_idlenotify.py  test_inert_defaults.py  test_install.py  test_install_commands.py  test_jump.py  test_launchd_plist.py  test_llm.py  test_locks.py  test_ls.py  test_mirrors.py  test_models.py  test_multi_account.py  test_new_prompt.py  test_nixos_overseer.py  test_notify.py  test_obsidian_plugins.py  test_obsidian_setup.py  test_packaging.py  test_peek.py  (+20 more)
tests/fixtures/: aim_labels.json
tools/: check_public_tree.py  gen_screenshots.py  public_tree_allowlist.txt  smoke_matrix.py
(+14 files in other folders)
