[project]
name = "claude-command-center"
version = "0.1.0"
description = "Command center for parked Claude Code sessions: AIM (done-when), progress, next-step, idle auto-close — terminal + browser."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "textual>=0.80",
    "textual-serve>=1.1",
    # `ccc peek` shows the focused tab's last prompt in a native floating panel
    # (macOS only); imported lazily so non-GUI commands never pay the AppKit cost.
    "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
    "pyyaml>=6.0.3",
    # Warm iTerm2 Python-API link for the live TUI's f+j jump (see command_center.
    # iterm_api): sub-ms focus/lookup vs the ~620 ms AppleScript window walk. Imported
    # lazily inside methods so the package stays optional (non-mac / no API server).
    "iterm2>=2.20",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy", "pylint"]

[project.scripts]
ccc = "command_center.cli:main"
codex-in-claude = "command_center.codex_in_claude:main"
claude-session-continue = "command_center.session_continue:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["command_center"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042 (prefer StrEnum): the installed mypy mis-types StrEnum members as str.
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# mypy >= 1.x reports "Library stubs not installed" (import-untyped) even with
# ignore_missing_imports; the nix-store mypy cannot get types-PyYAML installed.
disable_error_code = ["import-untyped"]
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end tests that build a wheel + spin a sandbox (deselect with -m 'not slow')",
]
